--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
+    "framer-motion": "^12.23.22",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
