--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_BASE_URL: https://api.command-center.web.id
+        NODE_ENV: production
+        JWT_SECRET: 158243e2-ccc0-4798-a944-2a5b0d1c90f3
+        PORT: 3000
     ports:
       - "3000:3000"
     environment:
@@ -12,8 +17,6 @@ services:
       - JWT_SECRET=158243e2-ccc0-4798-a944-2a5b0d1c90f3
       - NODE_ENV=production
       - PORT=3000
-
     restart: always
-
     volumes:
       - ./uploads:/usr/src/app/uploads
